New log system in place

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,7 +23,7 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build all",
+            "preLaunchTask": "build vscpd",
             "miDebuggerPath": "/usr/bin/gdb"
         },
         {
