--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -50,7 +50,7 @@ jobs:
 
     # only dev version on older ubuntu    
     - name: Install libspdlog manually
-      run: sudo apt-get install libspdlog-dev 
+      run: sudo apt-get install libspdlog libspdlog-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
