--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,8 +23,17 @@ jobs:
         repository: eclipse/paho.mqtt.c
         path: paho
 
-    - name: Install paho manually
+    - name: Checkout spdlog repo
+      uses: actions/checkout@v2
+      with:
+        repository: gabime/spdlog
+        path: spdlog    
+
+    - name: Build & install paho manually
       run: cd paho && mkdir build && cd build && sudo cmake -DPAHO_WITH_SSL=true .. && sudo make install
+
+    - name: Build and install spdlog manually
+      run: cd spdlog && mkdir build && cd build && sudo cmake .. && sudo make install  
            
     - name: Checkout google test repo
       run: sudo apt-get install libgtest-dev && cd /usr/src/gtest && sudo mkdir build && cd build && sudo cmake .. && sudo make DESTDIR=/usr/lib
@@ -49,8 +58,8 @@ jobs:
       run: sudo apt-get install libssl-dev
 
     # only dev version on older ubuntu    
-    - name: Install libspdlog manually
-      run: sudo apt-get install libspdlog libspdlog-dev
+    #- name: Install libspdlog manually
+    #  run: sudo apt-get install libspdlog-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
