--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -68,7 +68,7 @@
             }
         },
         {
-            "taskName": "clean & build vscphelper unittest",
+            "taskName": "clean & build unittest vscphelper",
             "type": "shell",
             "command": "cd tests/helperlib; make clean; make",
             "args": [],
@@ -88,6 +88,50 @@
                   "message": 5
                 }
             }
+        },
+        {
+            "taskName": "build unittest userlist",
+            "type": "shell",
+            "command": "cd test/userlist/build; make",
+            "args": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": "$gcc"
+        },
+        {
+            "taskName": "clean & build unittest userlist",
+            "type": "shell",
+            "command": "cd tests/userlist; mkdir build; cd build; cmake ..; make",
+            "args": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": "$gcc"
+        },
+        {
+            "taskName": "build unittest clientlist",
+            "type": "shell",
+            "command": "cd test/clientlist/build; make",
+            "args": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": "$gcc"
+        },
+        {
+            "taskName": "clean & build unittest clientlist",
+            "type": "shell",
+            "command": "cd tests/clientlist; mkdir build; cd build; cmake ..; make",
+            "args": [],
+            "group": {
+                "kind": "build",
+                "isDefault": false
+            },
+            "problemMatcher": "$gcc"
         },
     ]
 }
