--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
         {
             "taskName": "clean & build vscpd",
             "type": "shell",
-            "command": "mkdir build; cd build; rm -rf *; cmake .. -DCMAKE_BUILD_TYPE=Debug; make",
+            "command": "mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make clean; make",
             "args": [],
             "group": {
                 "kind": "build",
