All methods transfered to Mosquitto from Paho

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -92,10 +92,10 @@
             "name": "(gdb) vscp-client-mqtt",
             "type": "cppdbg",
             "request": "launch",
-            "program": "/home/akhe/development/VSCP/vscp/tests/vscp-client-mqtt/build/test",
+            "program": "${workspaceFolder}/tests/vscp-client-mqtt/build/test",            
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${workspaceFolder}/tests/vscp-client-mqtt/",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
