--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -17,20 +17,11 @@ jobs:
     # https://github.com/actions/checkout  
     - uses: actions/checkout@v2
 
-    - name: Checkout eclipse paho repo
-      uses: actions/checkout@v2
-      with:
-        repository: eclipse/paho.mqtt.c
-        path: paho
-
-    - name: Checkout spdlog repo
-      uses: actions/checkout@v2
-      with:
-        repository: gabime/spdlog
-        path: spdlog    
-
-    #- name: Build & install paho manually
-    #  run: cd paho && mkdir build && cd build && sudo cmake -DPAHO_WITH_SSL=true .. && sudo make install
+    # - name: Checkout spdlog repo
+    #   uses: actions/checkout@v2
+    #   with:
+    #     repository: gabime/spdlog
+    #     path: spdlog    
 
     - name: Build and install spdlog manually
       run: cd spdlog && mkdir build && cd build && sudo cmake .. && sudo make install  
@@ -47,7 +38,6 @@ jobs:
     - name: Install support libssl
       run: sudo apt install git libssl-dev libexpat-dev libsystemd-dev libwrap0-dev libz-dev
 
-    # Will be replaced with paho
     - name: Install libmosquitto-dev manually
       run: sudo apt install libmosquitto-dev
 
@@ -56,10 +46,6 @@ jobs:
 
     - name: Install libssl-dev manually
       run: sudo apt-get install libssl-dev
-
-    # only dev version on older ubuntu    
-    #- name: Install libspdlog manually
-    #  run: sudo apt-get install libspdlog-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
