--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,10 +83,13 @@
         "MQTT",
         "VSCP",
         "b",
+        "base",
         "bretain",
         "callback",
         "config",
+        "daemon",
         "debug",
+        "interfaces",
         "m",
         "mosq",
         "mosquitto",
@@ -97,6 +100,7 @@
         "spdlog",
         "subscribe",
         "to",
+        "topic",
         "unsubscribe",
         "Åke Hedman"
     ],
