Added preinst script and password generator binary

--- a/resources/debpkg/control
+++ b/resources/debpkg/control
@@ -1,14 +1,9 @@
 Source: vscpd
 Section: net
 Priority: optional
-Maintainer: Ake Hedman <info@vscp.org>
-Build-Depends: debhelper (>= %COMPAT), 
-               libssl-dev (>=1.0.0),
-               libsystemd-dev, 
-               libexpat1-dev (>=2.0),
-               libuuid1,
-               libwrap0-dev,
-               libz-dev
+Maintainer: Ake Hedman <akhe@vscp.org>
+Build-Depends: debhelper (>= %COMPAT)
+
 Standards-Version: 4.3.0
 Homepage: https://www.vscp.org
 Vcs-Browser: https://github.com/grodansparadis/vscp
@@ -25,8 +20,10 @@ Depends: adduser (>= 3.10),
          libc6-dev (>= 2.14),
          libstdc++6 (>= 5.2), 
          libgcc1 (>= 1:3.0), 
-         libssl-dev (>=1.0.0), 
+         libssl-dev (>=1.0.0),
+         libmosquitto-dev (>=1.4.15), 
          libexpat1-dev (>=2.0),
+         libsystemd-dev,
          libwrap0-dev (>=7.6),
          libz-dev
 Description: VSCP daemon
